fixed tomcat and tomcat6 tags